--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.7",
+    "cli-progress": "^3.12.0",
     "csv-parse": "^5.5.6",
     "csv-writer": "^1.6.0",
     "dayjs": "^1.11.13",
-    "fracturedjsonjs": "^4.0.2"
+    "jsonstream": "^1.0.3"
   },
   "scripts": {
     "test": "vitest",
-    "analyze:acquisitions:us": "node ./src/acquisitions/index.js ./data/input/acquisitions/us/data.csv ./data/input/acquisitions/us/acquirerSharePrices.csv ./data/input/acquisitions/us/acquirerSPXIndexPrices.csv --outputTopNumberCount 30 --minMarketCapForAnalyzingInM 10 --minAmountOfCompaniesInEachSampleSize 500"
+    "analyze": "npm run analyze:acquisitions:us && npm run acquisitions:us:prettify",
+    "analyze:acquisitions:us": "node ./src/acquisitions/index.js ./data/input/acquisitions/us/data.csv ./data/input/acquisitions/us/acquirerSharePrices.csv ./data/input/acquisitions/us/acquirerSPXIndexPrices.csv --outputTopNumberCount 30 --minMarketCapForAnalyzingInM 10 --minAmountOfCompaniesInEachSampleSizeForTopOutput 500",
+    "acquisitions:us:prettify": "jq '.' ./data/output/acquisitions/returnsUS.json > ./data/output/acquisitions/returnsUS.json"
   },
   "devDependencies": {
     "vitest": "^2.1.2"
