--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "vitest",
     "analyze": "npm run analyze:acquisitions:us && npm run acquisitions:us:prettify",
     "analyze:acquisitions:us": "node ./src/acquisitions/index.js ./data/input/acquisitions/us/data.csv ./data/input/acquisitions/us/acquirerSharePrices.csv ./data/input/acquisitions/us/acquirerSPXIndexPrices.csv --outputTopNumberCount 30 --minMarketCapForAnalyzingInM 10 --minAmountOfCompaniesInEachSampleSizeForTopOutput 500",
-    "acquisitions:us:prettify": "jq '.' ./data/output/acquisitions/returnsUS.json > ./data/output/acquisitions/returnsUS.json"
+    "acquisitions:us:prettify": "jq \".\" ./data/output/acquisitions/returnsUS.json > temp.json && move /Y temp.json ./data/output/acquisitions/returnsUS.json"
   },
   "devDependencies": {
     "vitest": "^2.1.2"
